--- a/QCAcontra.html
+++ b/QCAcontra.html
@@ -333,7 +333,7 @@ The package requires loading the <code>stringr</code> package into the library.<
 <li>the name of the dataset: <code>DFname</code>,</li>
 <li>the name of the truth table object: <code>TTname</code>,</li>
 <li>the type of row you want: <code>1</code> for consistent rows; <code>0</code> for inconsistent
-rows; <code>&quot;all&quot;</code> (or any character string) for both combined.</li>
+rows.</li>
 </ul>
 
 <p>Here is how it works with the hypothetical data and truth table.<br/>
@@ -399,11 +399,12 @@ Contradictory cases in consistent rows.</p>
 ##  highr         0.8     2019-03-20 [1] CRAN (R 3.5.3)
 ##  htmltools     0.4.0   2019-10-04 [1] CRAN (R 3.5.3)
 ##  httpuv        1.5.2   2019-09-11 [1] CRAN (R 3.5.3)
-##  knitr       * 1.26    2019-11-12 [1] CRAN (R 3.5.3)
+##  knitr         1.26    2019-11-12 [1] CRAN (R 3.5.3)
 ##  later         1.0.0   2019-10-04 [1] CRAN (R 3.5.3)
 ##  magrittr      1.5     2014-11-22 [1] CRAN (R 3.5.1)
 ##  memoise       1.1.0   2017-04-21 [1] CRAN (R 3.5.1)
 ##  mime          0.7     2019-06-11 [1] CRAN (R 3.5.3)
+##  packrat       0.5.0   2018-11-14 [1] CRAN (R 3.5.3)
 ##  pkgbuild      1.0.6   2019-10-09 [1] CRAN (R 3.5.3)
 ##  pkgload       1.0.2   2018-10-29 [1] CRAN (R 3.5.1)
 ##  prettyunits   1.0.2   2015-07-13 [1] CRAN (R 3.5.1)
@@ -416,6 +417,7 @@ Contradictory cases in consistent rows.</p>
 ##  remotes       2.1.0   2019-06-24 [1] CRAN (R 3.5.3)
 ##  rlang         0.4.1   2019-10-24 [1] CRAN (R 3.5.3)
 ##  rprojroot     1.3-2   2018-01-03 [1] CRAN (R 3.5.1)
+##  rstudioapi    0.10    2019-03-19 [1] CRAN (R 3.5.3)
 ##  sessioninfo   1.1.1   2018-11-05 [1] CRAN (R 3.5.1)
 ##  shiny         1.4.0   2019-10-10 [1] CRAN (R 3.5.3)
 ##  stringi       1.4.3   2019-03-12 [1] CRAN (R 3.5.3)
